package: Our food quality, Gallery, Book now

--- a/index.html
+++ b/index.html
@@ -42,6 +42,78 @@
                 <h2>Visit OR Book <span>now</span></h2>
             </div>
         </section>
+        <section class="quality">
+            <div class="quality-area">
+                <h1>Our food quality</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse  ultrices gravida. 
+                </p>
+                <h3>Double the fun</h3><h2>on every saturday<br/><span>Get upto 50% discount</span></h2>
+            </div>
+        </section>
+        <section class="gallery">
+            <h1>Gallery</h1>
+            <div class="gallery-area">
+                <div class="gallery-area--img">
+                    <img src="assets/images/img1-group4.png">
+                </div>
+                <div class="gallery-area--img">
+                    <img src="assets/images/img2-group4.png">
+                </div>
+                <div class="gallery-area--img">
+                    <img src="assets/images/img3-group4.png">
+                </div>
+                <div class="gallery-area--img">
+                    <img src="assets/images/img4-group4.png">
+                </div>
+                <div class="gallery-area--img">
+                    <img src="assets/images/img5-group4.png">
+                </div>
+                <div class="gallery-area--img">
+                    <img src="assets/images/img6-group4.png">
+                </div>
+                <div class="gallery-area--img">
+                    <img src="assets/images/img7-group4.png">
+                </div>
+            </div>
+        </section>
+        <section class="book">
+            <div class="book-area">
+            <h1>Book Your</h1>
+            <h2>Table Now And Have A Great Meal !</h2>
+                <form action="">
+                    <div class="form">
+                        <div class="form-part1">
+                            Your full name ?
+                            <input type="text" placeholder="Write your name here...">
+                            How many people ?
+                            <select class="input">
+                                <option value="1">1 people</option>
+                                <option value="1">2 people</option>
+                                <option value="1">3 people</option>
+                                <option value="1">4 people</option>
+                                <option value="1">5 people</option>
+                                <option value="1">6 people</option>
+                                <option value="1">7 people</option>
+                                <option value="1">8 people</option>
+                            </select>
+                            What is the date ?
+                            <input type="date" placeholder="01/15/2020">
+                        </div>
+                        <div class="form-part2">
+                            Your email address ?
+                            <input type="text" placeholder="Write your email here...">
+                            What time ?
+                            <input type="time" placeholder="10:00 am">
+                            Your phone number ?
+                            <input type="text" placeholder="Write your number here...">
+                        </div>
+                    </div>
+                    <input class="button" type="submit" value="Submit">
+                </form>
+            </div>
+        </section>
+        <section class="group6"></section>
     </main>
 
     <footer>
