--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>L'Gran</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='assets/style.css'>
+    <link rel="apple-touch-icon" sizes="180x180" href="imagens/apple-touch-icon.png">
 </head>
 <body>
     <main>
@@ -22,6 +23,16 @@
                             <li><a href="">Contact</a></li>
                             <li><a href="">Blog</a></li>
                         </ul>
+                    </div>
+                    <div class="menu-ipad">
+                        <div class="menu-ipad-logo">
+                            <img src="assets/images/logo.png">
+                        </div>
+                        <div class="menu-ipad-hamburguer">
+                            <div class="menu-ipad-hamburguer-line"></div>
+                            <div class="menu-ipad-hamburguer-line"></div>
+                            <div class="menu-ipad-hamburguer-line"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="startpage-info">
@@ -114,10 +125,45 @@
             </div>
         </section>
         <section class="group6"></section>
+        <section class="testimony">
+            <div class="testimony-area">
+                <h1>"</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
+                <h2>Linda Steward</h2>
+            </div>
+        </section>
     </main>
-
     <footer>
-        
+        <div class="footer-area">
+            <section class="contactus-area">
+                <div class="contactus">
+                    <h1>Enjoy Our Best Meal</h1>
+                    <p>Lorem ipsum dolor sit amet, cosectetur adi piscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna sed do eiusmod tempor incididunt ut labore etdolore</p>
+                    <h2>Contact us now</h2>
+                </div>
+            </section>
+            <section class="social">
+                <img src="assets/images/logo.png">
+                <div class="social-menu-area">
+                    <div class="social-menu">
+                        <ul>
+                            <li><a href="">About us</a></li>
+                            <li><a href="">Menu</a></li>
+                            <li><a href="">Gallery</a></li>
+                            <li><a href="">Bookings</a></li>
+                            <li><a href="">Contact</a></li>
+                            <li><a href="">Blog</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="social-redes">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-pinterest"></i></a>
+                </div>
+            </section>
+        </div>
     </footer>
 </body>
 </html>
