--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                             <li><a href="">About us</a></li>
                             <li><a href="">Menu</a></li>
                             <li><a href="">Gallery</a></li>
-                            <li><img src="assets/images/logo.png"></li>
+                            <li id="menu-img"><img src="assets/images/logo.png"></li>
                             <li><a href="">Bookings</a></li>
                             <li><a href="">Contact</a></li>
                             <li><a href="">Blog</a></li>
@@ -165,5 +165,6 @@
             </section>
         </div>
     </footer>
+    <script type="text/javascript" src="assets/javascript.js"></script>
 </body>
 </html>
